# swagger.json
@@ -537,6 +537,11 @@
                 "type": "string",
                 "description": "User`s subscription",
                 "example": "pro"
+              },
+              "avatarUrl": {
+                "type": "string",
+                "description": "User avatar",
+                "example": "//www.gravatar.com/avatar/d57fa4c185e22907e97382fa59233cdf"
               }
             }
           }
